--- a/css/menu.css
+++ b/css/menu.css
@@ -42,8 +42,8 @@ h1 a {
  	height: 92%;
  	/*max-width: 360px;*/
  	margin: 0 auto;
- 	background: #333;
- 	opacity: 0.9;
+ 	background: rgba(0,0,0,0.8);
+ 	/*opacity: 0.9;*/
  	/*-webkit-border-radius: 4px;
  	-moz-border-radius: 4px;*/
  	position: fixed;
