--- a/css/styles.css
+++ b/css/styles.css
@@ -259,16 +259,15 @@ footer img{
 /*公司介绍*/
 .company {
       width: 100%;
-      height: 100%;
       background-color: #F4F4F4;
-     /* padding: 0.3rem 0;
-      margin-top: 14%;*/
+      padding: 0.3rem 0;
+      margin-top: 14%;
 }
 .company .company-wrap{
 	width: 90%;
-	margin: 0 auto 0.35rem;
+	margin: 0 auto 0.3rem;
 	background-color: #fff;
-	padding: 0.4rem 0;
+	padding: 0.3rem 0;
 }
  .company .company-wrap .tit {
     font-size: 0.14rem;
