--- a/css/styles.css
+++ b/css/styles.css
@@ -380,7 +380,7 @@ footer img{
     height: 2rem;
     background-color: #fff;
 }
-#toTop{
+.top{
 	display: inline-block;
 	width: 0.35rem;
 	height: 0.35rem;
@@ -388,7 +388,45 @@ footer img{
 	background-size: cover;
 	background-position: center;
 	position: fixed;
-	bottom: 7%;
+	bottom: 4%;
 	right: 5%;
+	display: none;
+}
+/*.alert{
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.7);
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 10000;
+	display: none;
+}*/
+/*.alert p{
+	width: 80%;
+	background-color: #fff;
+	color: #333;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	font-size: 0.18rem;
+	padding: 0.15rem 0;
+	border-radius: 0.05rem;
+	margin-left: -40%;
+}*/
+.alert{
+	width: 80%;
+	background: rgba(0,0,0,0.7);
+	color: #fff;
+	text-align: center;
+	position: fixed;
+	left: 50%;
+	bottom: 2%;
+	font-size: 0.18rem;
+	padding: 0.1rem 0;
+	border-radius: 0.05rem;
+	margin-left: -40%;
+	z-index: 10000;
 	display: none;
 }
