--- a/css/styles.css
+++ b/css/styles.css
@@ -392,7 +392,7 @@ footer img{
 	right: 5%;
 	display: none;
 }
-/*.alert{
+.alert{
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,0.7);
@@ -401,8 +401,8 @@ footer img{
 	top: 0;
 	z-index: 10000;
 	display: none;
-}*/
-/*.alert p{
+}
+.alert p{
 	width: 80%;
 	background-color: #fff;
 	color: #333;
@@ -414,8 +414,8 @@ footer img{
 	padding: 0.15rem 0;
 	border-radius: 0.05rem;
 	margin-left: -40%;
-}*/
-.alert{
+}
+/*.alert{
 	width: 80%;
 	background: rgba(0,0,0,0.7);
 	color: #fff;
@@ -429,4 +429,4 @@ footer img{
 	margin-left: -40%;
 	z-index: 10000;
 	display: none;
-}
+}*/
