--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ html{font-size: 100px;}
 header{
 	width: 100%;
 	height: 8%;
-	background-color: #fff;
+	background-color: #333;
 	/*overflow: hidden;*/
 	position: fixed;
 	left: 0;
@@ -41,7 +41,7 @@ header .fold{
   height: 0.3rem;
   display: inline-block;
   margin: 0.13rem 0 0 5%;
-  background: url(../img/icon-1.png) no-repeat;
+  background: url(../img/icon-2.png) no-repeat;
   background-size: 90%;
   background-position: center left;
 }
