--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ html{font-size: 100px;}
 header{
 	width: 100%;
 	height: 8%;
-	background-color: #333;
+	background-color: red;
 	/*overflow: hidden;*/
 	position: fixed;
 	left: 0;
@@ -40,7 +40,7 @@ header .fold{
   width: 0.35rem;
   height: 0.3rem;
   display: inline-block;
-  margin: 0.13rem 0 0 5%;
+  margin: 0.1rem 0 0 5%;
   background: url(../img/icon-2.png) no-repeat;
   background-size: 75%;
   background-position: center left;
