--- a/css/menu.css
+++ b/css/menu.css
@@ -42,7 +42,7 @@ h1 a {
  	height: 92%;
  	/*max-width: 360px;*/
  	margin: 0 auto;
- 	background: rgba(0,0,0,0.8);
+ 	background: rgba(0,0,0,0.9);
  	/*opacity: 0.9;*/
  	/*-webkit-border-radius: 4px;
  	-moz-border-radius: 4px;*/
@@ -60,7 +60,7 @@ h1 a {
 	color: #333232;
 	font-size: 14px;
 	font-weight: 700;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid #999;
 	position: relative;
 	-webkit-transition: all 0.4s ease;
 	-o-transition: all 0.4s ease;
