--- a/css/menu.css
+++ b/css/menu.css
@@ -39,7 +39,7 @@ h1 a {
 
  .accordion {
  	width: 100%;
- 	height: 92%;
+ 	height: 93%;
  	/*max-width: 360px;*/
  	margin: 0 auto;
  	background: rgba(0,0,0,0.9);
@@ -48,7 +48,7 @@ h1 a {
  	-moz-border-radius: 4px;*/
  	position: fixed;
  	left: 0;
- 	top: 8%;
+ 	top: 0.5rem;
  	z-index: 10000;
  	display: none;
  }
